# hexabase-ai

./: .cursorrules  .env.debug.example  .env.example  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  E2E_TEST_SCREENSHOTS_CATALOG.md  LICENSE  Makefile  OAUTH_TESTING.md  README.md  RESUME_STATUS.md  STRUCTURE_GUIDE.md  WORK-STATUS.md  WORKSPACE-IMPLEMENTATION-SUMMARY.md  docker-compose.aiops.yml  docker-compose.debug.yml  docker-compose.yml
.github/workflows/: notify_discord.yml
ai-ops/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
ai-ops/app/: config.py  main.py
ai-ops/app/agents/: orchestrator.py  tools.py
ai-ops/app/llm_clients/: ollama.py
ai-ops/app/tests/: test_llm_clients.py  test_orchestrator.py  test_tools.py
ai-ops/src/aiops/: __init__.py  main.py
ai-ops/src/aiops/auth/: jwt_validator.py  middleware.py  models.py
ai-ops/src/aiops/core/: config.py  exceptions.py  logging.py  metrics.py
ai-ops/src/aiops/routers/: __init__.py  auth.py  chat.py  health.py  monitoring.py  operations.py  test_chat.py
api/: .golangci.yaml  Dockerfile  Dockerfile.debug  RESUME_STATUS.md  coverage_improvement_summary.md  go.mod  go.sum  run-dev.sh  test_coverage_report.md
api/internal/: aiops_structure_test.go  billing_structure_test.go  cicd_structure_test.go  node_handler_test.go  shared_migration_test.go
api/tests/: run_tests_with_coverage.sh
ci/: README.md
ci/github-actions/: README.md  ci-cd.yml  supply-chain.yml
ci/gitlab-ci/: .gitlab-ci.yml  README.md
ci/tekton/: README.md  pipeline.yaml
cli/hks-func/: Makefile  README.md  go.mod  go.sum  main.go
deployments/: README.md
deployments/helm/: README.md  values-local.yaml  values-production.yaml  values-staging.yaml
deployments/monitoring/: prometheus.yml
docs/: 01_concept.md  02_base_design.md  DEBUGGING.md  README.md  adr.md  api-reference.md  architecture.md  drafts.txt  guides.md  specifications.md  testing.md
docs/adr/: 002-authentication-security.md  009-secure-logging-architecture.md  010-package-by-feature.md  011-identity-broker.md  011-unify-database-migration.md  012-api-schema-driven-development.md  013-single-organization-scoped-jwt-token.md  MIGRATION_SUMMARY.md  README.md  WORK-STATUS.md
docs/api-reference/: authentication.md
docs/architecture/: README.md  cicd-architecture.md  database.md  function-service-fission.md  k3s-relationship.md  nodes-applications.md  security-architecture.md  system-architecture.md
docs/descriptions/: architecture_v1_en.md  implementation_v1_en.md
docs/development/: README.md  dev-environment-setup.md
docs/getting-started/: concepts.md
docs/implementation-summaries/: AI-AGENT-ARCHITECTURE.md  API_IMPLEMENTATION_PROGRESS_2025-01-08.md  API_IMPLEMENTATION_PROGRESS_2025-06-09.md  COPILOT_PR_FIXES_2025-01-08.md  (+8 more)
openapi/: openapi.yaml
scripts/: debug-e2e.sh  debug-help.sh  dev-cleanup.sh  dev-debug.sh  dev-setup.sh  e2e-debug-enhanced.sh  quick_test.sh  run-migration.sh  test_oauth_security.sh  unified-debug.sh
sdk/python/: README.md  pyproject.toml  run_tests.sh
sdk/python/examples/: async_execution.py  auto_cleanup.py  basic_usage.py
sdk/python/hexabase_ai/: __init__.py  client.py  exceptions.py
sdk/python/hexabase_ai/auth/: __init__.py  auth.py
sdk/python/hexabase_ai/functions/: __init__.py  functions.py
sdk/python/hexabase_ai/models/: __init__.py  models.py
sdk/python/tests/: __init__.py  conftest.py  test_auth.py  test_auto_cleanup.py  test_client.py  test_functions.py
ui/: .env.local.example  Dockerfile.dev  E2E_TEST_COMPLETION_REPORT.md  E2E_TEST_RESULTS_SUMMARY.md  E2E_TEST_SESSION_STATUS.md  README.md  UI_DEVELOPMENT_PLAN.md  WORK_STATE.md  eslint.config.mjs  jest.config.ts  jest.setup.tsx  package-lock.json  package.json  playwright-screenshot.config.ts  playwright.config.ts  playwright.debug.config.ts  tailwind.config.js  test-dev-auth.js
(+927 files in other folders)
