[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "hexabase-aiops"
version = "0.1.0"
description = "Hexabase AIOps - Intelligent Operations Platform"
authors = ["Hexabase Team <engineering@hexabase.com>"]
readme = "README.md"
packages = [{include = "aiops", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
pyjwt = {extras = ["crypto"], version = "^2.8.0"}
httpx = "^0.25.2"
aioredis = "^2.0.1"
asyncpg = "^0.29.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.23"}
alembic = "^1.13.0"
structlog = "^23.2.0"
prometheus-client = "^0.19.0"
langfuse = "^2.7.3"
ollama = "^0.1.7"
openai = "^1.3.9"
tiktoken = "^0.5.2"
tenacity = "^8.2.3"
croniter = "^2.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.7.1"
pre-commit = "^3.6.0"

[tool.poetry.group.test.dependencies]
httpx = "^0.25.2"
pytest-mock = "^3.12.0"
freezegun = "^1.2.2"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["aiops"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=aiops --cov-report=html --cov-report=term-missing"

[tool.coverage.run]
source = ["src/aiops"]
omit = ["*/tests/*", "*/migrations/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]